# pgsandbox-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  VISION.md  mise.toml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-site.yml  update-homebrew-tap.yml
.seo/: brand.md  config.json  content-ledger.md  keyword-research.json  link-inventory.md
.seo/briefs/: database-branching-vs-disposable-postgres-sandboxes.md  postgres-mcp-server-safety-checklist.md
docs/: agent-testing.md  agent-workflows.md  architecture.md  homebrew.md  install.md  mcp-tools.md  open-questions.md  session-benchmarks.md
rust-src/: cli.rs  config.rs  doctor.rs  lib.rs  local.rs  main.rs  mcp.rs  names.rs  postgres.rs  setup.rs  telemetry.rs
scripts/: build-bundle.mjs  check-site-blog-content.mjs  check-site-blog-tables.mjs  install.sh  package-homebrew.mjs  package-homebrew.sh  package-release.sh  uninstall.sh  update-homebrew-formula.sh
site/: .env.example  CHANGELOG.md  Dockerfile  README.md  astro.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json
site/src/: content.config.ts  env.d.ts
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: agentSetupPrompt.ts  blog.ts  markdownTables.mjs  (+1 more)
src/: config.test.ts  config.ts  doctor.ts  index.ts  names.test.ts  names.ts  postgres.ts  server.ts
src/setup/: client-config.test.ts  client-config.ts
tests/: dogfood_reliability.rs  extensions.rs  run_sql_serialization.rs  session_lifecycle.rs
(+38 files in other folders)
